# subgpt

./: .gitignore  README.md  main.py  pyproject.toml  subgpt.sublime-syntax  todo.md
issues/: subgpt-001.md  subgpt-002.md  subgpt.md
subgpt/: Default (Linux).sublime-keymap  Default (OSX).sublime-keymap  Default (Windows).sublime-keymap  Main.sublime-menu  costs.py  deps  funcypy  main.py  main.sublime-menu  subgpt.sublime-commands  subgpt.sublime-keymap  subgpt.sublime-settings  subgpt.sublime-syntax
