[project]
name = "subgpt"
version = "0.1.0"
description = "A ChatGPT plug-in for sublime text."
readme = "README.md"
requires-python = "==3.8"
dependencies = [
    "funcypy @ git+ssh://git@github.com/lostineverland/funcypy.git",
    "cligpt @ git+ssh://git@github.com/lostineverland/cligpt.git",
]
authors = [
  { name="Carlos Bonilla", email="lostineverland@gmail.com" }
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
