[project]
name = "subgpt"
version = "0.1.0"
description = "A ChatGPT plug-in for sublime text."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # "funcypy @ git+ssh://git@github.com/lostineverland/funcypy.git",
    "funcypy",
    "python-frontmatter>=1.1.0",
]
authors = [
  { name="Carlos Bonilla", email="lostineverland@gmail.com" }
]

[tool.hatch.build.targets.wheel]
packages = ["subgpt"]

# [tool.hatch.build.hooks.custom]
# paths = ["build_sublime_package.py"]
# scripts = [
#     "python build_sublime_package.py"
# ]

[tool.uv.sources]
# funcypy = { url = "git+ssh://git@github.com/lostineverland/funcypy.git" }
funcypy = { path = "../funcypy" }
# funcypy = { workspace = true}

# [tool.uv.workspace]
# members = ["../funcypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.metadata]
# allow-direct-references = true
